--- a/Mission6_Villar/appsettings.json
+++ b/Mission6_Villar/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MovieConnection": "Data Source = moviedatabase.sqlite"
+    "MovieConnection": "Data Source = moviedatabase.sqlite" //establishing connection to database
   }
 }
